# voproshalych

./: .env.benchmark-models.example  .env.example  .gitignore  .gitlab-ci.yml  ISSUES.md  README.md  docker-compose.admin-db.yml  docker-compose.benchmarks.yml  docker-compose.yml  main.py  pyproject.toml
adminpanel/: models.py  requirements.txt  tests.py  views.py
adminpanel/templates/: analyze_no_docs.html  menu.html  service_stats.html  settings.html
benchmarks/: .dockerignore  DASHBORAD.md  Dockerfile  Makefile  README.md  SMOKE_SCENARIO.md  SMOKE_SCENARIO_DOCKER.md  SMOKE_SCENARIO_LOCAL.md  __init__.py  analyze_chunk_utilization.py  analyze_real_users_domain.py  analyze_topic_coverage.py  dashboard.py  generate_dataset.py  generate_embeddings.py  load_database_dump.py  pyproject.toml  requirements.txt  run_benchmarks.py  run_comprehensive_benchmark.py  run_dashboard.py  save_models.py  visualize_vector_space.py
benchmarks/architecture_snapshots/: 2026-02-13_Architecture_Audit.md  2026-02-13_Initial_Audit.md  README.md
benchmarks/data/: dataset_20260216_101423.json  dataset_judge_pipeline_20260220.json  final_test_dataset.json  golden_dataset_synthetic.json  test_dataset.json  test_dataset_correct.json
benchmarks/data/raw/: 03_golden_set_score_5.json.txt  04_low_quality_score_1.json.txt  07_all_questions.json.txt  08_score_distribution.json.txt  10_recent_questions_with_url_last_6_months.json.txt
benchmarks/data/static/: 01_all_questions_with_answers.json.txt  02_all_questions_without_answers.json.txt  05_questions_with_url.json.txt  06_questions_with_embeddings.json.txt  09_recent_questions_last_6_months.json.txt
benchmarks/docs/: ARCHITECTURE.md  CLEANUP_BENCHMARK_RUNS.md  CLI_REFERENCE.md  CODE_DUPLICATION_ANALYSIS.md  FULL_RUN_MODEL_LAB_GUIDE.md  METRICS.md  METRICS_ACADEMIC.md  MODEL_COMPARISON_GUIDE.md  RUN_MODES_LOCAL_VS_DOCKER.md  SMOKE_SCENARIO_DOCKER.md  SMOKE_SCENARIO_LOCAL.md  manual_annotation_guide.md
benchmarks/models/: __init__.py  rag_benchmark.py  real_queries_benchmark.py  retrieval_benchmark.py
benchmarks/reports/: BENCHMARK_ANALYSIS_REPORT_20260223.md
benchmarks/tests/: __init__.py
benchmarks/utils/: __init__.py  data_loader.py  database_dump_loader.py  embedding_generator.py  evaluator.py  llm_judge.py  report_generator.py  static_data_loader.py  text_metrics.py
chatbot/: .dockerignore  Dockerfile  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt  strings.py  tests.py
chatbot/max/: bot.go  bot_strings.go  confluence_client.go  go.mod  go.sum  keyboards.go  main.go  max_api_config.go  qa_client.go
chatbot/max/storage/: storage.go  storage_test.go
db/: alembic-main.ini  requirements.txt  wait-for-db.sh
db/migration/versions/: 051032488686_add_vector_to_the_questionanswer.py  3c9c99360a80_create_holidays.py  766d54169326_add_embedding_to_questionanswer.py  86c962b93381_add_stop_point_column_to_questionanswer_.py  a1b2c3d4e5f6_rename_url_and_add_source_type.py  add_is_voice_column.py
docs/: README.md  chatbot.md  qa.md  stt.md
max/: Dockerfile  config.go  main.go
qa/: .dockerignore  Dockerfile  README.md  am.py  config.py  confluence_retrieving.py  confluence_retrieving.py.bak  conftest.py  database.py  emb_script.py  main.py  mistral_config.py  requirements.txt  save_models.py  test_audio.py  tests.py  utmn_retrieving.py
qa/sources/: __init__.py  utmn_base_source.py  utmn_combined_source.py  utmn_contacts_source.py  utmn_events_source.py  utmn_news_source.py  utmn_rss_source.py  utmn_structure_source.py
qa/sources/tests/: test_utmn_sources.py
stt/: .dockerignore  Dockerfile  README.md  am.py  app.py  docker-compose.yml  download_model.py  inference.py  pyproject.toml
stt/test/: pyproject.toml  telegram-bot.py  vk-bot.py
stt/tests/: conftest.py  test_transcribe.py
voicehandler/: README.md  get_wav.py  inference.py  telegram-bot.py
