[project]
name = "voproshalych-benchmarks"
version = "0.1.0"
description = "Benchmarking system for RAG evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "sqlalchemy",
    "psycopg2-binary",
    "pgvector",
    "sentence-transformers",
    "numpy",
    "openai",
    "tenacity",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dashboard = [
    "gradio>=6.5.1",
]

dev = [
    "pytest",
]

all = [
    "voproshalych-benchmarks[dashboard,dev]",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
package = false
