[project]
name = "stt"
version = "0.1.0"
description = "Speech-to-text microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gigaam[longform] @ git+https://github.com/salute-developers/GigaAM.git",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:pydub.*:",
    "ignore::DeprecationWarning:websockets.*:",
    "ignore::UserWarning:gigaam.*:"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "pydub>=0.25.1",
    "gTTS>=2.5.0",
    "uvicorn",
    "python-multipart",
]
